--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "helmet": "^5.1.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
